--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title> Education </title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> </head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+</head>
 
 <body>
     <nav class="navbar position-fixed w-100 bg-white">
@@ -30,8 +31,10 @@
         <div class="container py-5">
             <div class="heading ">
                 <h1 class="display-3 text-white">Investing in Knowledge.</h1>
-                <p class="text-white h-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisl elit, varius ut magna vel, tincidunt iaculis sem. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p> <span class="btn btn-signup px-4 ">Sign Up for Excustion</span> <span class="btn btn-light ml-4">Learn More</span></div>
-        </div>r </div>
+                <p class="text-white h-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisl elit, varius ut magna vel, tincidunt iaculis sem. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p> <span class="btn btn-signup px-4 ">Sign Up for Excustion</span> <span class="btn btn-light ml-4">Learn More</span>
+            </div>
+        </div>r
+    </div>
 </body>
 
 </html>
