--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar position-fixed w-100 bg-white">
+    <nav class="navbar position-fixed w-100 bg-white px-5">
         <div class="nav">
             <div class="nabar-brand "> <span><a href="#"><img src="images/logo.png" alt="" style="height: 4rem;"></a></span><span><a href="#" class="mbr-bold display-5 mbr-black">EducationM4</a></span></div>
         </div>
@@ -29,12 +29,28 @@
     </nav>
     <div class="container-fluid header1 py-5">
         <div class="container py-5">
-            <div class="heading ">
+            <div class="heading py-5">
                 <h1 class="display-3 text-white">Investing in Knowledge.</h1>
                 <p class="text-white h-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisl elit, varius ut magna vel, tincidunt iaculis sem. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p> <span class="btn btn-signup px-4 ">Sign Up for Excustion</span> <span class="btn btn-light ml-4">Learn More</span>
             </div>
-        </div>r
+        </div>
     </div>
-</body>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1>A Few Words <br>
+                        About our Сourses
+                    </h1>
+                    <div class="line-wrap">
+                        <div class="line"></div>
+                    </div>
+                    <p class=" ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in nisi non arcu rutrum molestie. Phasellus vel vehicula enim. Nullam congue porttitor posuere. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin in ultricies ex.
 
-</html>
+                    </p>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+    </div>
+</body></html>
